# pymmich

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  justfile  pyproject.toml
.github/workflows/: docs.yml  release.yml  tests.yml
docs/: development.md  getting-started.md  zensical.yml
docs/commands/: download.md  list-users.md  share.md  unshare.md
docs/content/: api-permissions.md  changelog.md  configuration.md  development.md  distribution.md  index.md
docs/content/commands/: download.md  list.md  upload.md
scripts/: build_pyinstaller.py  clean.py  extract_changelog.py
src/pymmich/: __init__.py  __main__.py  cli.py  client.py
tests/: conftest.py  test_build_pyinstaller.py  test_build_pyinstaller_smoke.py  test_client.py  test_client_sharing.py  test_download.py  test_extract_changelog.py  test_list.py  test_list_users.py  test_share.py  test_unshare.py  test_upload.py
